add button styles

--- a/assets/styles/button.less
+++ b/assets/styles/button.less
@@ -1,6 +1,6 @@
 .button-styles {
-  background-color: @secondary-color;
-  color: @primary-color;
+  background-color: @primary-color;
+  color: @quaternary-color;
   border: 1px solid @tertiary-color;
   font-size: 20px;
   font-family: "Poppins", Arial, sans-serif !important;
