--- a/assets/styles/global.less
+++ b/assets/styles/global.less
@@ -1,5 +1,2 @@
-@primary-color: #9b59b6;
-@secondary-color: #f1c40f;
-@tertiary-color: #e67e22;
-@quaternary-color: #f0f0f0;
-@primary-color-dark: darken(@primary-color, 10%);
+@import "colors.less";
+@import "mediaQueries.less";
