--- a/assets/styles/button.less
+++ b/assets/styles/button.less
@@ -1,10 +1,25 @@
 .button-styles {
-  background-color: @primary-color;
-  color: @quaternary-color;
-  border: 1px solid @tertiary-color;
-  font-size: 20px;
-  font-family: "Poppins", Arial, sans-serif !important;
-  font-weight: bold;
-  border-radius: 5px;
-  padding: 10px;
+  background-color: @primary-color; // Kolor wierzchu klawisza
+  color: @quaternary-color; // Kolor tekstu
+  font-family: "Kirang Haerang", Arial, system-ui;
+  font-size: 1.5rem;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  box-shadow: 0 0 0 2px lighten(@primary-color, 15%),
+    0 4px 0 4px darken(@primary-color, 15%), 0 6px 4px rgba(0, 0, 0, 0.3); /* cień pod klawiszem */
+  transition: transform 0.1s ease, box-shadow 0.1s ease;
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0 0 0 2px lighten(@primary-color, 15%),
+      0 4px 0 4px darken(@primary-color, 15%), 0 5px 6px rgba(0, 0, 0, 0.4);
+  }
+
+  &:active {
+    transform: translateY(2px) scale(0.95);
+    box-shadow: 0 0 0 2px lighten(@primary-color, 15%),
+      0 1px 0 2px darken(@primary-color, 15%), 0 2px 6px rgba(0, 0, 0, 0.5);
+  }
 }
