--- a/assets/styles/button.less
+++ b/assets/styles/button.less
@@ -1,6 +1,6 @@
 .button-styles {
-  background-color: @primary-color; // Kolor wierzchu klawisza
-  color: @quaternary-color; // Kolor tekstu
+  background-color: @primary-color;
+  color: @quaternary-color;
   font-family: "Kirang Haerang", Arial, system-ui;
   font-size: 1.5rem;
   padding: 10px 16px;
